--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test": "npm run unit"
   },
   "dependencies": {
+    "jade": "^1.11.0",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0",
+    "vue-scrollbar": "^1.0.4",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
